# tunix-library

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
examples/: advanced_demo.c  advanced_demo_cpp.cpp  dashboard_demo.cpp  demo_c.c  demo_cpp.cpp  form_demo.cpp  interactive_demo.c  spinner_demo.c
include/: tunix.h  tunix.hpp  tunix_platform.h  tunix_renderer.h  tunix_types.h  tunix_widget.h
src/: tunix_platform.c  tunix_renderer.c  tunix_types.c  tunix_widget.c
